# impulse-entrance

./: CMakeLists.txt  README.md  base.cpp  base.h  club.cpp  club.h  event.cpp  event.h  main.cpp
.github/workflows/: cmake-single-platform.yml
tests/: base_tests.cpp  club_tests.cpp  event_tests.cpp
